Application all in one, working
