# openapi/delivery-service-api.yaml
@@ -1,34 +1,69 @@
 openapi: "3.0.0"
 info:
   version: 1.0.0
-  title: Swagger Delivery Service
+  title: Swagger Bar sale Service
   license:
     name: MIT
 servers:
   - url: http://localhost:5000/v1.0
 paths:
-  /bar_sale/{d_id}:
-    get:
-      summary: Get a Delivery Record
-      operationId: resources.delivery.Delivery.get
+  /user/:
+    post:
+      summary: Create a User
+      operationId: resources.user.User.create
       tags:
-        - delivery record
+        - User records
+      requestBody:
+        description: User Information
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserIn"
+      responses:
+        '200':
+          description: Created User Record
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  user_id:
+                    type: string
+                    description: The User ID
+        '500':
+          description: Record with the same name already exists
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /user/{d_id}:
+    get:
+      summary: Get a User Record
+      operationId: resources.user.User.get
+      tags:
+        - User record
       parameters:
         - name: d_id
           in: path
-          description: Delivery identifier
+          description: User identifier
           required: true
           schema:
             type: string
       responses:
         '200':
-          description: Delivery Record
+          description: User Record
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/DeliveryOut"
+                $ref: "#/components/schemas/UserOut"
         '404':
-          description: Delivery record not found
+          description: User record not found
           content:
             application/json:
               schema:
@@ -40,16 +75,15 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
     delete:
-      summary: Delete a Delivery Record
+      summary: Delete a User Record
       tags:
         - place records
-      operationId: resources.delivery.Delivery.delete
+      operationId: resources.user.User.delete
       parameters:
         - name: d_id
           in: path
-          description: Delivery Record identifier
+          description: User Record identifier
           required: true
           schema:
             type: string
@@ -61,7 +95,74 @@ paths:
               schema:
                 $ref: "#/components/schemas/AnyMsg"
         '404':
-          description: Delivery record not found
+          description: User record not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /product/:
+    post:
+      summary: Create a product
+      operationId: resources.product.Product.create
+      tags:
+        - Product records
+      requestBody:
+        description: Product Information
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ProductIn"
+      responses:
+        '200':
+          description: Created Product Record
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  product_id:
+                    type: string
+                    description: The Product ID
+        '500':
+          description: Record with the same name already exists
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /product/{d_id}:
+    get:
+      summary: Get a Product Record
+      operationId: resources.product.Product.get
+      tags:
+        - Product record
+      parameters:
+        - name: d_id
+          in: path
+          description: Product identifier
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Product Record
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProductOut"
+        '404':
+          description: Product record not found
           content:
             application/json:
               schema:
@@ -73,29 +174,124 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+    delete:
+      summary: Delete a Product Record
+      tags:
+        - place records
+      operationId: resources.product.Product.delete
+      parameters:
+        - name: d_id
+          in: path
+          description: Product Record identifier
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Record was deleted
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AnyMsg"
+        '404':
+          description: Product record not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /bar_sale/{d_id}:
+    get:
+      summary: Get a Sale Record
+      operationId: resources.sale.Bar_sale.get
+      tags:
+        - sale record
+      parameters:
+        - name: d_id
+          in: path
+          description: Sale identifier
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Sale Record
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SaleOut"
+        '404':
+          description: Sale record not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+    delete:
+      summary: Delete a Sale Record
+      tags:
+        - place records
+      operationId: resources.sale.Bar_sale.delete
+      parameters:
+        - name: d_id
+          in: path
+          description: Sale Record identifier
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Record was deleted
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AnyMsg"
+        '404':
+          description: Sale record not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /bar_sale/:
     post:
-      summary: Create a Delivery
-      operationId: resources.delivery.Delivery.create
+      summary: Create a Sale
+      operationId: resources.sale.Bar_sale.create
       tags:
-        - Delivery records
+        - Sale records
       requestBody:
-        description: Delivery Information
+        description: Sale Information
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/saleIn"
+              $ref: "#/components/schemas/SaleIn"
       responses:
         '200':
-          description: Created Delivery Record
+          description: Created Sale Record
           content:
             application/json:
               schema:
                 type: object
                 properties:
-                  delivery_id:
+                  sale_id:
                     type: string
-                    description: The delivery ID
+                    description: The sale ID
         '500':
           description: Record with the same name already exists
           content:
@@ -109,22 +305,22 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /deliveries/{d_id}/status:
+  /bar_sale/{d_id}/status:
     put:
-      summary: Update the status of a Delivery
-      operationId: resources.delivery.Status.update
+      summary: Update the status of a Sale
+      operationId: resources.sale.Status.update
       tags:
-        - Delivery records
+        - Sale records
       parameters:
         - name: d_id
           in: path
-          description: Delivery identifier
+          description: Sale identifier
           required: true
           schema:
             type: string
         - name: status
           in: query
-          description: Delivery status
+          description: Sale status
           required: true
           schema:
             type: string
@@ -150,6 +346,45 @@ paths:
                 $ref: "#/components/schemas/Error"
 components:
   schemas:
+    ProductIn:
+      required:
+        - name
+        - price
+      properties:
+        name:
+          format: string
+        price:
+          format: string
+    ProductOut:
+      required:
+        - id
+      properties:
+        id:
+          type: number
+        name:
+          format: string
+        price:
+          format: string
+        stock:
+          $ref: "#/components/schemas/Stock"
+    Stock:
+      properties:
+        stock:
+          type: string
+        last_update:
+          type: string
+    UserIn:
+      required:
+        - name
+        - balance
+        - date_of_birth
+      properties:
+        name:
+          format: string
+        balance:
+          format: string
+        date_of_birth:
+          format: string
     SaleIn:
       required:
         - buyer_id
@@ -159,19 +394,43 @@ components:
           format: string
         seller_id:
           format: string
-        delivery_time:
+        sale_time:
           format: string
-    DeliveryOut:
+        product_ids:
+          type: array
+          items:
+            type: object
+            required:
+              - product_id
+              - quantity
+            properties:
+              product_id:
+                type: integer
+              quantity:
+                type: integer
+    UserOut:
       required:
         - id
       properties:
         id:
           type: number
-        customer_id:
+        name:
           format: string
-        package_id:
+        balance:
           format: string
-        delivery_time:
+        date_of_birth:
+          format: string
+    SaleOut:
+      required:
+        - id
+      properties:
+        id:
+          type: number
+        buyer_id:
+          format: string
+        seller_id:
+          format: string
+        sale_time:
           format: string
         status:
           $ref: "#/components/schemas/Status"
